<resources>
    <string name="app_name">FarmerEat Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quality">Quality</string>
    <string name="quality_desc">Sell your farm fresh products directly to consumers, cutting out the middleman and reducing emissions of the global supply chain. </string>
    <string name="convenient">Convenient</string>
    <string name="convenient_desc">Our team of delivery drivers will make sure your orders are picked up on time and promptly delivered to your customers. </string>
    <string name="local">Local</string>
    <string name="local_desc">We love the earth and know you do too! Join us in reducing our local carbon footprint one order at a time.  </string>
    <string name="join_the_movement">Join the movement!</string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="farmereat">FarmerEat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="new_here">New here?</string>
    <string name="create_account"> Create account</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot?</string>
    <string name="or_login_with">or login with</string>
    <string name="password">Password</string>
    <string name="send_code">Send Code</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="resend"><u>Resend</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="signup_1_of_4">Signup 1 of 4</string>
    <string name="signup_2_of_4">Signup 2 of 4</string>
    <string name="signup_3_of_4">Signup 3 of 4</string>
    <string name="signup_4_of_4">Signup 4 of 4</string>
    <string name="welcome">Welcome!</string>
    <string name="google_login">Google Login</string>
    <string name="apple_id_login">Apple Id Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="or_signup_with">or signup with</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="continue_">Continue</string>
    <string name="farm_info">Farm Info</string>
    <string name="business_name">Business Name</string>
    <string name="informal_name">Informal Name</string>
    <string name="street_address">Street Address</string>
    <string name="verification_msg">Attached proof of Department of Agriculture registrations i.e. Florida Fresh, USDA Approved, USDA Organic</string>
    <string name="business_hours_msg">Choose the hours your farm is open for pickups. This will allow customers to order deliveries.</string>
    <string name="attach_proof_of_registration">Attach proof of registration</string>
    <string name="verification">Verification</string>
    <string name="m">M</string>
    <string name="su">Su</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="t">T</string>
    <string name="business_hours">Business Hours</string>
    <string name="please_fill_email">Please fill email address</string>
    <string name="please_fill_password">Please fill password</string>
    <string name="please_fill_valid_email_address">Please fill valid email address</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="email_cannot_be_empty">Email cannot be empty.</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="remove_attached_proof_of_registration">Remove Attached proof of registration</string>
    <string name="default_web_client_id">1005408726708-t2fjnsnrkmn7p20irsit8esg01i4uned.apps.googleusercontent.com</string>
    <string name="main_activity_msg">Hang tight! We are currently reviewing your account and will follow up with you in 2-3 business days. In the meantime, you can setup your inventory.</string>
    <string name="success">Success</string>
    <string name="loading">Loading...</string>
    <string name="slider_indicator">Slider Indicator</string>
    <string name="you_re_all_done">You’re all done!</string>
</resources>