<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".screens.login.ResetPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/be_vietnam_regular"
        android:text="@string/farmereat"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/be_vietnam_bold"
        android:text="@string/reset_password"
        android:textColor="@color/primary_text"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/remember_your_password"
            android:textColor="@color/light_text_30" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/login"
            android:textColor="@color/primary" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/input_text_bg"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/be_vietnam_regular"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_text_30"
        android:textSize="14sp"
        tools:ignore="LabelFor" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_text_bg"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/be_vietnam_regular"
        android:hint="@string/confirm_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_text_30"
        android:textSize="14sp"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>