<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary"
    tools:context=".screens.onboarding.FirstScreenFragment">

    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_quality"
        android:layout_marginTop="32dp"
        app:layout_constraintDimensionRatio="1:1
"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:padding="32dp"
        android:background="@drawable/rounded_corner_white_bg"
        app:layout_constraintTop_toBottomOf="@id/iv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quality"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/be_vietnam_bold"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quality_desc"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_text"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/be_vietnam_regular"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_onboard_1"
            android:contentDescription="@string/slider_indicator"
            android:layout_marginTop="27dp"/>

        <Button
            android:id="@+id/join_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/join_the_movement"
            android:layout_marginTop="60dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/be_vietnam_medium"
            android:backgroundTint="@color/tertiary"/>

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_underlined"
            android:textColor="@color/primary_text"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/be_vietnam_medium"
            android:textSize="14sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>