<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".screens.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/be_vietnam_regular"
        android:text="@string/farmereat"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/be_vietnam_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/primary_text"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/new_here"
            android:textColor="@color/light_text_30"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/primary"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/create_account" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_text_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/be_vietnam_regular"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_text_30"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="LabelFor" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_text_bg"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/be_vietnam_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxLength="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_text_30"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/forgot_pass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/be_vietnam_regular"
            android:text="@string/forgot"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/be_vietnam_regular"
        android:text="@string/or_login_with"
        android:textColor="@color/primary_text_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="96dp"
            android:layout_height="52dp"
            android:background="@drawable/stroke_rounded_white_bg"
            android:paddingVertical="11dp"
            android:src="@drawable/ic_google" />

        <ImageView
            android:id="@+id/apple_btn"
            android:layout_width="96dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="21dp"
            android:background="@drawable/stroke_rounded_white_bg"
            android:paddingVertical="11dp"
            android:src="@drawable/ic_apple" />

        <ImageView
            android:id="@+id/facebook_btn"
            android:layout_width="96dp"
            android:layout_height="52dp"
            android:background="@drawable/stroke_rounded_white_bg"
            android:paddingVertical="11dp"
            android:src="@drawable/ic_facebook"/>


    </LinearLayout>


</LinearLayout>