<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".screens.signup.HoursFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/be_vietnam_regular"
            android:text="@string/farmereat"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/signup_4_of_4"
            android:textColor="@color/light_text_30" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/be_vietnam_bold"
            android:text="@string/business_hours"
            android:textColor="@color/primary_text"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/business_hours_msg"
            android:textColor="@color/light_text_30" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <TextView
                android:id="@+id/monday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/react_primary_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tuesday"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/t"
                android:textColor="@color/primary_text_30"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/wednesday"
                app:layout_constraintStart_toEndOf="@+id/monday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/w"
                android:textColor="@color/primary_text_30"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/thursday"
                app:layout_constraintStart_toEndOf="@id/tuesday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/th"
                android:textColor="@color/primary_text_30"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/friday"
                app:layout_constraintStart_toEndOf="@+id/wednesday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/f"
                android:textColor="@color/primary_text_30"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/saturday"
                app:layout_constraintStart_toEndOf="@+id/thursday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/s"
                android:textColor="@color/primary_text_30"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sunday"
                app:layout_constraintStart_toEndOf="@id/friday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/sunday"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/be_vietnam_regular"
                android:gravity="center"
                android:text="@string/su"
                android:textColor="@color/primary_text_30"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/saturday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/business_hours_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="-3dp"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


        <Button
            android:id="@+id/continue_btn"
            android:layout_width="226dp"
            android:layout_height="52dp"
            android:layout_gravity="end"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/be_vietnam_medium"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>